Correct text alignment for small screen devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,6 +117,7 @@ footer {
     section div {
         font-size: smaller;
         line-height: 1.25em;
+        margin-right: 1em;
     }
 
     main h1 {
